Update powershell scripts to build correct GC logs configuration depending from used java version.